[FAB-11992] idemix role from boolean to int
Replacing boolean type of idemix role with
integer to support more role types.
Provides "idemix roles" to map multiple MSP Roles
to only one bitsmak integer value.
